--- a/environment.yaml
+++ b/environment.yaml
@@ -14,11 +14,12 @@ dependencies:
   - console_shortcut_miniconda
   - powershell_shortcut_miniconda
   - pandas
-  - jupyterlab[version='<4']
+  - jupyterlab
   - jupyterlab-spellchecker
   - jupyterlab-git
   - jupyter-book
   - pyppeteer
   - nbconvert
   - nb_conda_kernels
+  - scikit-learn=1.2.1
 prefix: C:\Users\aquiapo\AppData\Local\miniconda3
