--- a/environment.yaml
+++ b/environment.yaml
@@ -1,4 +1,4 @@
-name: base
+name: project-env
 channels:
   - conda-forge
   - defaults
@@ -22,4 +22,5 @@ dependencies:
   - nbconvert
   - nb_conda_kernels
   - scikit-learn=1.2.1
+  - matplotlib
 prefix: C:\Users\aquiapo\AppData\Local\miniconda3
